--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <p>Una experiencia de realidad virtual consiste en entrar en una simulación generada por computadora, con un equipo que desempeña un papel esencial. Unas anteojos de realidad virtual proporcionan información visual y audible sobre el mundo que está explorando el participante, al tiempo que un enorme número de sensores y tecnologías traducen los movimientos de la persona al mundo virtual.
 Las imágenes de la realidad virtual pueden construir a partir de fotografías o películas de lugares reales, o bien pueden generar en su totalidad por computadora (CGI por sus siglas en inglés). Entre estas dos opciones, la realidad virtual les permite a las personas explorar exactamente cualquier mundo que pueda imaginar, desde las calles de una ciudad extranjera a la superficie de un distante planeta de ficción. </p>
 
- <a href="file:///C:/Users/USERPC/Documents/diseño3/imagenes5/ai.html">Ir a la inteligencia artificial</a>
- <a href="file:///C:/Users/USERPC/Documents/diseño3/imagenes6/ra.html">ir a Realidad aumentada</a>
+ <a href="https://cinthia508.github.io/inteligenciaartificial.github.io/">Ir a la inteligencia artificial</a>
+ <a href="https://cinthia508.github.io/realidadaumentada.github.io/">ir a Realidad aumentada</a>
 
 <img src="descarga2.jpg" width="300px" height="200px">
 <img src="descarga5.jpg" width="300px" height="300px">
